[gd_scene load_steps=9 format=3 uid="uid://buqu4u5q10vbs"]

[ext_resource type="Script" uid="uid://ct3370r55isra" path="res://scripts/player.gd" id="1_ij6vw"]
[ext_resource type="Texture2D" uid="uid://blxrm15n4bip3" path="res://assets/20251203test_charF2.png" id="3_6p80c"]
[ext_resource type="Script" path="res://scripts/test_hurtbox.gd" id="4_8ut53"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ij6vw"]
size = Vector2(16, 3)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6p80c"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8ut53"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4fwf8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2ue4q"]

[node name="player" type="CharacterBody2D"]
disable_mode = 2
motion_mode = 1
script = ExtResource("1_ij6vw")

[node name="Sprite2D_test" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
scale = Vector2(1.0375713, 1)
texture = ExtResource("3_6p80c")

[node name="physics_hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 9.5)
scale = Vector2(0.9, 0.9)
shape = SubResource("RectangleShape2D_ij6vw")

[node name="atk_view" type="Sprite2D" parent="."]
texture_filter = 1

[node name="thrust_attack" type="CollisionShape2D" parent="."]
scale = Vector2(1.7, 0.2)
shape = SubResource("CapsuleShape2D_6p80c")
disabled = true

[node name="swipe_attack" type="CollisionShape2D" parent="."]
scale = Vector2(1.5, 0.5)
shape = SubResource("CapsuleShape2D_8ut53")
disabled = true

[node name="shield_block" type="CollisionShape2D" parent="."]
scale = Vector2(2, 0.25)
shape = SubResource("CapsuleShape2D_4fwf8")
disabled = true

[node name="Hurtbox" type="Area2D" parent="."]
script = ExtResource("4_8ut53")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
scale = Vector2(0.9, 0.7)
shape = SubResource("CapsuleShape2D_2ue4q")
debug_color = Color(1, 0, 0, 0.3137255)
